Primer cambio html y css con animación

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
-*{
+/* *{
 	margin: 0;
 	padding: 0;
 	font-family: 'Roboto', sans-serif;
@@ -13,472 +11,13 @@ html{
 
 h1,h2,h3{
 	text-transform: uppercase;
-	color: darkgoldenrod;
 }
 
 body{
 	font-size: 1.7rem;
 }
-
-nav{
-	/*color*/
-	background-color: black;
-	/*posición*/
-	position: sticky;
-	top: 0;
-	/*padding*/
-	padding: 10px 30px;
-	/*display flex*/
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}	
-
-	body nav img{
-			width: 400px; height: 100px;
-	}
-
-		nav ul{
-			display: flex;
-		}
-
-			nav ul li{
-					list-style: none;
-					margin-right: 20px;
-			}
-
-				nav ul li a{
-						font-size: 2rem;
-  						color: white;
-  						padding: 40px 50px;
-  						text-decoration: none;
-				}
-
-body{
-	background-image: url(../img/background.jpeg);
-	background-repeat: repeat;
-	background-attachment: fixed;
-	background-size: cover;
-}
-
-	body div img{
-			width: 100%; height: 500px;
-	}
-
-.parrafo_home{
-	background-color: white;
-	text-align: center;
-	width: 70%;
-	height: auto;
-	margin: 60px auto;
-	padding: 10px 20px;
-	border: double black;
-	overflow-x: auto;
-}
-
-.imagen-home{
-	margin: auto;
-}
-
-.formulario{
-	width: 65%;
-	margin: 0 auto;
-}
-
-.input{
-	width: 100%;
-	height: 3rem;
-	margin-bottom: 1rem;
-}
-
-.button_form_home{
-	width: 40%;
-	margin-left: 2.5%;
-	height: 2rem;
-	color: white;
-	background-color: darkgoldenrod;
-}
-
-.logoavc{
-	width: 400px; height: 100px;
-}
-
-.logosrrss{
-	width: 50px; height: 50px;
-}
-
-.footer{
-	background-color: black;
-}
-
-
-/* ----- PAGE NOSOTROS ----- */
-.parrafo_nosotros{
-	background-color: white;
-	text-align: left;
-	width: 80%;
-	height: auto;
-	margin: 60px auto;
-	padding: 10px 20px;
-	border: double; black;
-	overflow-x: auto;
-}
-
-/* ----- PAGE SERVICIOS ----- */
-.video_ejemplo{
-	/*margin: 60px 300px;
-	padding: 10px 20px;*/
-}
-
-.lista_servicios{
-	background-color: white;
-	text-align: left;
-	width: 50%;
-	height: auto;
-	margin: 60px auto;
-	padding: 10px 20px;
-	border: double; black;
-}
-
-
-.parrafo_servicios{
-	background-color: white;
-	text-align: left;
-	width: 50%;
-	height: auto;
-	margin: 60px auto;
-	padding: 10px 20px;
-	border: double; black;
-	overflow-x: auto;
-}
-
-
-/* ----- PAGE CLIENTES ----- */
-.h1-page-clientes{
-	margin: 30px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.p-page-clientes{
-	width: 80%;
-	height: auto;
-	margin: auto;
-}
-
-#clientes .galeria{
-	margin: 20px;
-	display: flex;
-	justify-content: space-around;
-}
-
-	#clientes .galeria figure{
-		text-align: center;
-	}
-
-		#clientes .galeria figure figcaption{
-			font-size: 2.5rem;
-			color: darkgoldenrod;
-		}
-
-			#clientes .galeria figure p{
-				font-size: 1.6rem;
-			}
-.logosclientes{
-	height: 180px;
-	width: 180px;
-}		
-
-/* ----- PAGE CONTACTO ----- */
-.h1-page-contacto{
-	margin: 30px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.p-page-contacto{
-	width: 80%;
-	height: auto;
-	margin: auto;
-}
-
-.formulario_page_contacto{
-	background-color: white;
-	text-align: left;
-	width: 50%;
-	height: auto;
-	margin: 60px auto;
-	padding: 10px 20px;
-	border: double; black;
-	overflow-x: auto;
-}
-
-/* PRÁCTICA GRID */
-/* BODY HOME HTML */
-.grid{
-	display: grid;
-}
-
-.contenedor-home{
-	grid-template-columns: repeat(4, 1fr);
-	grid-template-areas: "nav nav nav nav"
-						 "div div div div"
-						 "main main img img"
-						 "form form form form"
-						 "footer footer footer footer";
-}
-
-#menu{
-	grid-area: nav;
-}
-
-#banner{
-	grid-area: div;
-}
-
-#cuerpo{
-	grid-area: main;
-}
-
-#imagen-home{
-	grid-area: img;
-}
-
-#formulario{
-	grid-area: form;
-}
-
-#footer{
-	grid-area: footer;
-}
-
-/* BODY NOSOTROS HTML */
-.contenedor-nosotros{
-	grid-template-columns: repeat(4, 1fr);
-	grid-template-areas: "nav2 nav2 nav2 nav2"
-						 "div2 div2 div2 div2 "
-						 "img2 img2 main2 main2 "
-						 "form2 form2 form2 form2"
-						 "footer2 footer2 footer2 footer2";
-}
-
-#menu-nosotros{
-	grid-area: nav2;
-}
-
-#banner-nosotros{
-	grid-area: div2;
-}
-
-#imagen-nosotros{
-	grid-area: img2;
-}
-
-
-#cuerpo-nosotros{
-	grid-area: main2;
-}
-
-#formulario-nosotros{
-	grid-area: form2;
-}
-
-#footer-nosotros{
-	grid-area: footer2;
-}
-
-
-/* BODY SERVICIOS HTML */
-.contenedor-servicios{
-	grid-template-columns: repeat(4, 1fr);
-	grid-template-areas: "nav3 nav3 nav3 nav3"
-						 "main3 main3 vid vid"
-						 "list list form3 form3"
-						 "footer3 footer3 footer3 footer3";
-}
-
-#menu-servicios{
-	grid-area: nav3;
-}
-
-#cuerpo-servicios{
-	grid-area: main3;
-}
-
-#lista-servicios{
-	grid-area: list;
-}
-
-#video-servicios{
-	grid-area: vid;
-}
-
-#formulario-servicios{
-	grid-area: form3;
-}
-
-#footer-servicios{
-	grid-area: footer3;
-}
-
-
-
-
-/* BODY CLIENTES HTML */
-/*
-.contenedor-clientes{
-	grid-template-columns: repeat(3, 1fr);
-	grid-template-areas: "nav nav nav"
-						 "div div div"
-						 "main main img"
-						 "form form form"
-						 "footer footer footer";
-}
-#menu{
-	grid-area: nav;
-}
-
-#banner{
-	grid-area: div;
-}
-
-#cuerpo{
-	grid-area: main;
-}
-
-#imagen-home{
-	grid-area: img;
-}
-
-#formulario{
-	grid-area: form;
-}
-
-#footer{
-	grid-area: footer;
-}
 */
 
-
-
-
-
-/* PRÁCTICA GRID II Web Responsive (Mobile First te odio, en mi perra vida te uso) */
-
-/* MEDIA QUERIES */
-
-/*
-
-}*/
-
-
-@media screen and (min-width: 768px) and (max-width: 1200px){
-	#menu{
-		display: flex;
-		flex-direction: column;
-	}
+.anim-rotate {
+  transform: rotate(20deg);
 }
-
-
-
-/*@media screen and (min-width: 320) and (max-width: 768px){
-	#menu{
-		display: flex;
-		flex-direction: column;
-	}
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
