--- a/css/style.css
+++ b/css/style.css
@@ -244,13 +244,26 @@ BODY SERVICIOS HTML
 }
 */
 
-/*PRÁCTICA SASS I (DESAFÍO)*/
+/* SASS */
 
-header {
-  background-color: yellow; }
-  header nav {
-    text-align: justify; }
-    header nav ul {
-      list-style-position: unset; }
-      header nav ul li {
-        list-style-type: none; }
+.btn-base, .btn-visita {
+  width: 100px;
+  height: 30px;
+  background-color: darkseagreen;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white; }
+  .btn-base:hover, .btn-visita:hover {
+    background-color: darkgreen;
+    color: white; }
+
+.btn-visita {
+  border: black; }
+
+h2, h3 {
+  line-height: 1em; }
+
+.bg-footer {
+  background-color: darkgreen; }
