Avance y arreglo de páginas

--- a/css/style.css
+++ b/css/style.css
@@ -23,20 +23,8 @@ h1,h2,h3{
 	overflow-x: auto;
 }
 
-.logoavc{
-	width: auto; height: 700px;
-}
-
-.btn-css{
-	color: white;
-	background-color: darkgreen;
-}
 /*.logosrrss{
 	width: 50px; height: 50px;
-}
-
-.footer{
-	background-color: black;
 }*/
 
 /*APLICA PARA TODOS LOS PÁRRAFOS (home, nosotros y servicios), POR AHORA...*/
@@ -64,19 +52,23 @@ h1,h2,h3{
 	justify-content: center;
 }
 
-.video_ejemplo{
-	/*margin: 60px 300px;
-	padding: 10px 20px;*/
+.video-servicios{
+	text-align: center;
+}
+
+.p-page-servicios{
+	width: 80%;
+	height: auto;
+	margin: auto;
 }
 
 .lista_servicios{
 	text-align: left;
-	width: 50%;
-	height: auto;
-	margin: 60px auto;
-	padding: 10px 20px;
 }
 
+.margin-servicios{
+	margin-bottom: 30px;
+}
 
 /* ----- PAGE CLIENTES ----- */
 .h1-page-clientes{
@@ -106,10 +98,15 @@ h1,h2,h3{
 			color: darkgreen;
 		}
 
-.logosclientes{
-	height: 180px;
-	width: 180px;
-}		
+.fig-clientes{
+	font-weight: 900;
+	color: darkgreen;
+	margin-bottom: 15px;
+}
+
+.img-clientes{
+	margin-bottom: 20px;
+}
 
 /* ----- PAGE CONTACTO ----- */
 .h1-page-contacto{
@@ -135,114 +132,7 @@ h1,h2,h3{
 	overflow-x: auto;
 }
 
-/* PRÁCTICA GRID
-BODY HOME HTML
-.grid{
-	display: grid;
-}
-
-.contenedor-home{
-	grid-template-columns: repeat(4, 1fr);
-	grid-template-areas: "nav nav nav nav"
-						 "div div div div"
-						 "main main img img"
-						 "form form form form"
-						 "footer footer footer footer";
-}
-
-#menu{
-	grid-area: nav;
-}
-
-#banner{
-	grid-area: div;
-}
-
-#cuerpo{
-	grid-area: main;
-}
-
-#imagen-home{
-	grid-area: img;
-}
-
-#formulario{
-	grid-area: form;
-}
-
-#footer{
-	grid-area: footer;
-}
-
-BODY NOSOTROS HTML
-.contenedor-nosotros{
-	grid-template-columns: repeat(4, 1fr);
-	grid-template-areas: "nav2 nav2 nav2 nav2"
-						 "div2 div2 div2 div2 "
-						 "img2 img2 main2 main2 "
-						 "form2 form2 form2 form2"
-						 "footer2 footer2 footer2 footer2";
-}
-
-#menu-nosotros{
-	grid-area: nav2;
-}
-
-#banner-nosotros{
-	grid-area: div2;
-}
-
-#imagen-nosotros{
-	grid-area: img2;
-}
-
-
-#cuerpo-nosotros{
-	grid-area: main2;
-}
-
-#formulario-nosotros{
-	grid-area: form2;
-}
-
-#footer-nosotros{
-	grid-area: footer2;
-}
-
-
-BODY SERVICIOS HTML
-.contenedor-servicios{
-	grid-template-columns: repeat(4, 1fr);
-	grid-template-areas: "nav3 nav3 nav3 nav3"
-						 "main3 main3 vid vid"
-						 "list list form3 form3"
-						 "footer3 footer3 footer3 footer3";
-}
-
-#menu-servicios{
-	grid-area: nav3;
-}
-
-#cuerpo-servicios{
-	grid-area: main3;
-}
-
-#lista-servicios{
-	grid-area: list;
-}
-
-#video-servicios{
-	grid-area: vid;
-}
-
-#formulario-servicios{
-	grid-area: form3;
-}
-
-#footer-servicios{
-	grid-area: footer3;
-}
-*/
+/* SASS */
 
 .btn-base, .btn-visita {
   width: 100px;
@@ -264,4 +154,4 @@ h2, h3 {
   line-height: 1em; }
 
 .bg-footer {
-  background-color: darkgreen; }
+  background-color: whitesmoke; }
